[package]
name = "purgeable"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
libc = "0.2"
page_size = "0.4"
serde = { version = "1.0", optional = true }
stable_deref_trait = { version = "1.2.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
ioctl-sys = "0.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "std", "minwindef", "basetsd", "memoryapi", "winnt" ] }

[dev-dependencies]
bytesize = "1.1"

[profile.release]
debug = true